# sharder

./: .gitignore  ACKNOWLEDGMENTS.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  INSTALL.md  README.md  SECURITY.md  SUPPORT.md  default.conf  docker-compose-generator.py  docker-compose-shard.yml  socat-entrypoint.sh  test.py  tests.py
.github/workflows/: deploy.yml
frontend/: Dockerfile  package.json
frontend/src/: env.js  utils.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/_components/: authForm.tsx  clientLayout.tsx  confirm.tsx  dev.tsx  nav.tsx  shardHealthcheck.tsx  uploader.tsx
frontend/src/app/access/: page.tsx
frontend/src/app/context/: AuthContext.tsx  FileEventContext.tsx
frontend/src/app/explorer/: page.tsx
frontend/src/styles/: globals.css
grafana/provisioning/dashboards/: sharder-dashboard.yml
grafana/provisioning/dashboards/sharder/: fastapi-overview.json  nginx-overview.json  shard-node-health.json
prometheus/: prometheus.yml
prometheus/file_sd/: .gitignore
server/: Dockerfile  auth.py  hub.py  pyproject.toml  server.py
server/db/: __init__.py  db.py  models.py
shard/: .gitignore  Dockerfile  Dockerfile.buildenv  Makefile  pyproject.toml  shard.py
shard/src/: shard.cpp
